--- a/package.json
+++ b/package.json
@@ -81,12 +81,14 @@
     "feathers-hooks-common": "^4.10.0",
     "feathers-nedb": "3.0.1",
     "final-form": "^4.6.1",
+    "final-form-arrays": "^1.1.0",
     "history": "^4.7.2",
     "http-proxy": "^1.16.2",
     "js-cookie": "^2.1.3",
     "localforage": "^1.4.3",
     "lodash": "^4.17.10",
     "lru-memoize": "^1.0.1",
+    "moment": "^2.22.2",
     "morgan": "^1.8.1",
     "multireducer": "^3.1.0",
     "nedb": "^1.8.0",
@@ -99,6 +101,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "react-final-form": "^3.4.0",
+    "react-final-form-arrays": "^1.0.6",
     "react-helmet": "^5.0.3",
     "react-loadable": "^5.3.0",
     "react-redux": "^5.0.6",
@@ -116,7 +119,8 @@
     "redux-persist-cookie-storage": "^1.0.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
-    "socket.io-client": "^2.0.1"
+    "socket.io-client": "^2.0.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
