--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "qs": "^6.5.2",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
+    "react-datepicker": "^1.7.0",
     "react-dom": "^16.3.1",
     "react-final-form": "^3.4.0",
     "react-final-form-arrays": "^1.0.6",
