--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "lodash": "^4.17.10",
     "lru-memoize": "^1.0.1",
     "moment": "^2.22.2",
+    "moment-range": "^4.0.1",
     "morgan": "^1.8.1",
     "multireducer": "^3.1.0",
     "nedb": "^1.8.0",
@@ -99,12 +100,15 @@
     "qs": "^6.5.2",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.4",
+    "react-bootstrap-time-picker": "^1.0.3",
     "react-datepicker": "^1.7.0",
+    "react-dates": "^18.3.1",
     "react-dom": "^16.3.1",
     "react-final-form": "^3.4.0",
     "react-final-form-arrays": "^1.0.6",
     "react-helmet": "^5.0.3",
     "react-loadable": "^5.3.0",
+    "react-moment-proptypes": "^1.6.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
